--- a/JingFM-RoundEffect/MagicOpener-Info.plist
+++ b/JingFM-RoundEffect/MagicOpener-Info.plist
@@ -44,5 +44,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wxf5816fd0200f4d1d</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
